# deep-mac

./: pyproject.toml
scripts/: setup_lib.py
