[tool.ruff]
line-length = 120

[tool.mypy]
strict = true

[tool.poetry]
name = "data science template"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
jupyter = "^1.0.0"
Pillow = "^9.2.0"
numpy = "^1.23.4"
pandas = "^1.5.1"
seaborn = "^0.12.1"
scikit-image = "^0.19.3"
opencv-contrib-python = "^4.6.0.66"
torch = { version = "^1.12.1", python = "<3.11" }
scikit-learn = "^1.1.3"
mypy = "^1.3.0"
ruff = "^0.1.3"
tf-slim = "^1.1.0"
pickleshare = "^0.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
